<resources>
    <string name="app_name">Movie Time</string>
    <string name="title_discover">Discover</string>
    <string name="title_library">Library</string>
    <string name="title_calendar">Upcomings</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by movie title, tv show, or actor name</string>
    <string name="search_error">Unable to fetch search results.  Please check your internet connection and try again.</string>
    <string name="image_description">Movie Poster</string>
    <string name="movie_description">Movie Poster</string>
    <string name="library_button">TODO</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="genre">Genre</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="status">Status</string>
    <string name="released">Released</string>
    <string name="budget_format">$%,d</string>
    <string name="runtime_format">%d Minutes</string>
    <string name="date_year_format">%tY</string>
    <string name="date_format">%1$tB %1$te, %tY</string>
    <string name="server_client_id">787218429014-q3ge3vvkt5dad2uini5aui3hfehkv634.apps.googleusercontent.com</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email: %1$s</string>
    <string name="action_bookmark">Bookmark this movie</string>

    <string name="action_share">Share this movie</string>
    <string name="action_share_stats">Share Stats</string>

    <string name="notification_stars_title"> Upcoming Movie!</string>
    <string name="notification_stars_text"> %1$s is now upcoming this week!</string>
    <string name="notification_stars_summary_title"> %1$d repos have new stars!</string>

    <string name="notification_stars_channel" translatable="false">starsNotificationChannel</string>
    <string name="notification_stars_channel_title">Star count updates</string>
    <string name="share_text">Lets watch %1$s, It has an average rate of %2$.1f!!</string>
    <string name="share_stats_text">The most recently released movie I watched was %1$s,
        and the total runtime of all the movies I watched was %2$s minutes.
    </string>

    <string name="longest_runtime_movie">&#8226; Movie with Longest Runtime:\n\t\t\t%1$s\n\t\t\tRuntime: %2$d minutes</string>
    <string name="highest_budget_movie">&#8226; Movie with the Highest Budget:\n\t\t\t%1$s\n\t\t\tBudget: $%2$d</string>
    <string name="total_runtime">&#8226; Total Runtime of All Movies Viewed:\n\t\t\tTotal Runtime: %1$d minutes</string>
    <string name="total_runtime_time">%1$d</string>
    <string name="most_recent_released_movie">&#8226; Most Recently Released Movie Viewed:\n\t\t\t%1$s</string>
    <string name="most_recent_released_movie_name">%1$s</string>
    <string name="avg_runtime">&#8226; Average Runtime of All Movies Viewed:\n\t\t\tAverage Runtime: %1$d minutes</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="delete_database">delete_database</string>
    <string name="darkmode">darkmode</string>
    <string name="settings">Settings</string>
    <string name="listview">listview</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="profile">profile</string>
    <string name="stats">stats</string>
    <string name="settings_title">settings</string>
    <string name="trigger_notification">Trigger Notification</string>
</resources>