<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflowmenu"
        android:icon="@drawable/ic_action_account_light"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_action_profile"
                />
            <item
                android:id="@+id/action_stats"
                android:title="@string/stats"
                android:icon="@drawable/ic_action_stats"
                />
            <item
                android:id="@+id/action_setting"
                android:title="@string/settings_title"
                android:icon="@drawable/ic_action_settings"
                />
        </menu>
    </item>

</menu>
