<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.movietime.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/nav_detail"
            app:destination="@id/movie_detail"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.movietime.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/nav_detail"
            app:destination="@id/movie_detail"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.movietime.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar">
    <action
        android:id="@+id/nav_detail"
        app:destination="@id/movie_detail"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_sign_in"
        android:name="com.example.movietime.ui.profile.SignInFragment"
        tools:layout="@layout/fragment_google_sign_in" />

    <fragment
        android:id="@+id/movie_detail"
        android:name="com.example.movietime.ui.detail.MovieDetailFragment"
        android:label="Movie">
        <argument
            android:name="movie"
            app:argType="com.example.movietime.data.Movie"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.movietime.ui.settings.SettingsFragment"
        android:label="Settings">
    </fragment>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.movietime.ui.stats.StatsFragment"
        android:label="Stats">
    </fragment>


</navigation>