<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.discover.DiscoverFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:placeholderTextAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/search_hint"
        app:startIconDrawable="@drawable/ic_baseline_search_24">
        <EditText
            android:id="@+id/et_search_box"
            android:inputType="text"
            android:layout_width="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="4dp"
        style="?attr/materialButtonStyle"
        android:text="@string/search" />

    <TextView
        android:id="@+id/text_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:text="Popular Movies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_results"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_search_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorError"
            android:visibility="invisible"
            android:text="@string/search_error"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="32dp"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>