<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/Stats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:text="Stats"
        android:textAlignment="center"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/longest_runtime_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Movie w/ Longest RunTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/Longest_runtim_movie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Stats"
        app:layout_constraintVertical_bias=".45"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/Longest_runtim_movie"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:text="@string/longest_runtime_movie"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/Highest_Budget_Movie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/highest_budget_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Movie w/ Highest Budget"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/Highest_Budget_Movie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Longest_runtim_movie"
        app:layout_constraintVertical_bias=".55"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/Highest_Budget_Movie"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:text="@string/highest_budget_movie"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/Total_Runtime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Longest_runtim_movie" />

    <TextView
        android:id="@+id/Total_Runtime_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Total Runtime of All Movies Viewed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/Total_Runtime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Highest_Budget_Movie"
        app:layout_constraintVertical_bias=".6"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/Total_Runtime"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/total_runtime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/Most_Recently_Released"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Highest_Budget_Movie" />

    <TextView
        android:id="@+id/Most_Recently_Released_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Most Recently Released Movies Viewed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/Most_Recently_Released"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Total_Runtime"
        app:layout_constraintVertical_bias=".65"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/Most_Recently_Released"
        android:textAlignment="center"
        android:layout_marginTop="-20dp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/most_recent_released_movie"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/teal_200"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/Avg_Runtime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Total_Runtime" />

    <TextView
        android:id="@+id/Avg_Runtime_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Average Runtime of all Movies Viewed"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/Most_Recently_Released"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Avg_Runtime"
        app:layout_constraintVertical_bias=".35"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/Avg_Runtime"
        android:textAlignment="center"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:includeFontPadding="false"
        android:text="@string/avg_runtime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/Most_Recently_Released" />
</androidx.constraintlayout.widget.ConstraintLayout>