<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_centerInParent="true"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#21FFFFFF"
            android:padding="15dp">

                <TextView
                    android:id="@+id/tv_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Star Wars: A New Hope"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_release_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_avg_rating_detail"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
                    tools:text="1977" />

                <TextView
                    android:id="@+id/tv_avg_rating_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_baseline_star_rate_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_year"
                    app:layout_constraintTop_toTopOf="@+id/tv_release_year"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/iv_poster_detail"
                    android:layout_width="257dp"
                    android:layout_height="311dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/movie_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release_year" />

                <TextView
                    android:id="@+id/tv_overview_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:autoSizeTextType="uniform"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail"
                    tools:text="Princess Leia is captured and held hostage by the evil Imperial forces in their effort to take over the galactic Empire. Venturesome Luke Skywalker and dashing captain Han Solo team together with the loveable robot duo R_detail-D_detail and C-3PO to rescue the beautiful princess and restore peace and justice in the Empire." />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview_detail" />

                <TextView
                    android:id="@+id/runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/genre" />

                <TextView
                    android:id="@+id/tv_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/runtime"
                    app:layout_constraintStart_toStartOf="@+id/tv_genre_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genre_detail"
                    tools:text="104 minutes" />

                <TextView
                    android:id="@+id/tv_genre_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/genre"
                    app:layout_constraintTop_toBottomOf="@+id/tv_overview_detail"
                    tools:text="Sci-Fi" />

                <TextView
                    android:id="@+id/tv_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/budget"
                    app:layout_constraintStart_toStartOf="@+id/tv_runtime"
                    app:layout_constraintTop_toBottomOf="@+id/tv_runtime"
                    tools:text="$13403143" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/status"
                    app:layout_constraintStart_toStartOf="@+id/tv_budget"
                    app:layout_constraintTop_toBottomOf="@+id/tv_budget"
                    tools:text="Released" />

                <TextView
                    android:id="@+id/tv_release_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/released"
                    app:layout_constraintStart_toStartOf="@+id/tv_status"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status"
                    tools:text="1977" />

                <TextView
                    android:id="@+id/budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/runtime" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/budget" />

                <TextView
                    android:id="@+id/released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/status" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>